07 March 2009

* break-pane command to create a new window using an existing pane.

02 March 2009

* Make escape key timer work properly so escape+key can be used without
  lightning fast key presses.

13 February 2009

* Redo mode keys slightly more cleanly and apply them to command prompt
  editing. vi or emacs mode is controlled by the session option status-keys.

12 February 2009

* Looking up argv[0] is expensive, so just use p_comm for the window name which
  is good enough. Also increase name update time to 500 ms.

11 February 2009

* Only use ri when actually at the top of the screen; just move the cursor up
  otherwise.
* FreeBSD's console wraps lines at $COLUMNS - 1 rather than $COLUMNS (the
  cursor can never be beyond $COLUMNS - 1) and does not appear to support
  changing this behaviour, or any of the obvious possibilities (turning off
  right margin wrapping, insert mode). This is irritating, most notably because
  it impossible to write to the very bottom-right of the screen without
  scrolling. To work around this, if built on FreeBSD and run with a "cons"
  $TERM, the bottom-right cell on the screen is omitted.
* Emulate scroll regions (slowly) to support the few terminals which don't have
  it (some of which don't really have any excuse).

10 February 2009

* No longer redraw the status line every status-interval unless it has actually
  changed.

08 February 2009

* Don't treat empty arguments ("") differently when parsing configuration
  file/command prompt rather than command line.
* tmux 0.7 released.

03 February 2009

* New command, copy-buffer (alias copyb), to copy a session paste buffer to
  another session.

01 February 2009

* The character pair #(command) may now contain (escaped) right parenthesis.

30 January 2009

* . now bound to "command-prompt 'move-window %%'" by default, from joshe.

29 January 2009

* Window options to set status line fg, bg and attributes for a single