@@ -81,7 +81,6 @@
 - attach should have a flag to create session if it doesn't exist
 - swap-pane-up, swap-pane-down (maybe move-pane-*)
 - move-pane (to window) (maybe break-pane?)
-- 88 colour support; new grid cell flag, and 256<->88 88<->16 translation tables
 - some fix for SF feature request 2527847 - now remain-by-default has gone
   cannot control it per-session
 - clear window title on exit
@@ -94,4 +93,5 @@
   for stuff like mode keys?
 - document status-keys
 - document break-pane
+- document -8 flag
 - refer to windows by name etc (duplicates? fnmatch?)
