@@ -1,4 +1,4 @@
-/* $Id: server-msg.c,v 1.64 2009-02-16 19:01:16 nicm Exp $ */
+/* $Id: server-msg.c,v 1.65 2009-03-07 10:29:06 nicm Exp $ */
 
 /*
  * Copyright (c) 2007 Nicholas Marriott <nicm@users.sourceforge.net>
@@ -205,6 +205,8 @@ server_msg_fn_identify(struct hdr *hdr, struct client *c)
 		c->tty.flags |= TTY_UTF8;
 	if (data.flags & IDENTIFY_256COLOURS)
 		c->tty.term_flags |= TERM_256COLOURS;
+	else if (data.flags & IDENTIFY_88COLOURS)
+		c->tty.term_flags |= TERM_88COLOURS;
 	if (data.flags & IDENTIFY_HASDEFAULTS)
 		c->tty.term_flags |= TERM_HASDEFAULTS;
 	xfree(term);
