@@ -1,5 +1,6 @@
 07 March 2009
 
+* Support for 88 colour terminals.
 * break-pane command to create a new window using an existing pane.
 
 02 March 2009
@@ -1123,7 +1124,7 @@
   (including mutt, emacs). No status bar yet and no key remapping or other
   customisation.
 
-$Id: CHANGES,v 1.257 2009-03-07 09:29:54 nicm Exp $
+$Id: CHANGES,v 1.258 2009-03-07 10:29:06 nicm Exp $
 
  LocalWords:  showw utf UTF fulvio ciriaco joshe OSC APC gettime abc DEF OA clr
  LocalWords:  rivo nurges lscm Erdely eol smysession mysession ek dstname RB ms
